# CodeSearch

./: .gitignore  AI-handoff.md  Decadal-Horizon-Forensic-Report.md  Project-Manager.py  README.md  abraham_global.csv  analyze_2026.py  comet_verification.csv  covenant_peace.csv  cyrus_precision.csv  daniel_9_discovery.csv  decadal_horizon_report.md  diana_verification.csv  gematria_424_test.csv  generate_kjv_stubs.py  jesus_messiah_test.csv  main.py  messiah_english_semz.csv  messiah_long_range.csv  messiah_peace_heb.csv  messiah_significance.csv  pyproject.toml  requirements.txt  run13_log.txt  run15_log.txt  run17_log.txt  run18_log.txt  run20_log.txt  run21_log.txt  run22_log.txt  run23_log.txt  run24_log.txt  run24_zion_log.txt  run25_messiah_eng_log.txt  run27_diana.txt  run28_world_leaders.txt  run29_trump_solo.txt  run30_netanyahu_solo.txt  run31_cyrus_baseline.txt  run35_v2.txt  (+52 more)
.github/: copilot-instructions.md
analysis/: __init__.py  network.py
backend/: __init__.py  api.md  api.py  archiver.py  data_loader.py  engine.py  expander.py  fetch_kjv_nt.py  gridder.py  main.py  reporter.py  stats.py  translator.py  validator.py
bot/: __init__.py  manager.py
data/: translation_cache.json
docs/: decadal_horizon.md  network_20260410.csv  network_20260410.graphml
engine/: __init__.py  search.py
frontend/: DESIGN.md  index.html
texts/: 40-Matthew.txt  41-Mark.txt  42-Luke.txt  43-John.txt  44-Acts.txt  45-Romans.txt  46-1Corinthians.txt  47-2Corinthians.txt  48-Galatians.txt  49-Ephesians.txt  50-Philippians.txt  51-Colossians.txt  52-1Thessalonians.txt  (+14 more)
(+3 files in other folders)
