[project]
name = "codesearch-ultra"
version = "2.0.0"
description = "CodeSearch-Ultra — Modular ELS Intelligence Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "deep-translator>=1.11.4",
    "fastapi[standard]>=0.135.3",
    "gitpython>=3.1.43",
    "networkx>=3.4",
    "numpy>=2.2",
    "polars>=1.39.3",
    "pyluach>=2.3.0",
    "python-dateutil>=2.9.0.post0",
    "pyvis>=0.3.2",
    "requests>=2.32",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.45",
    "stringzilla>=4.6.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "uvicorn>=0.43.0",
]

[project.scripts]
codesearch     = "main:main"
codesearch-bot = "bot.manager:main"

[tool.uv]
package = false
